--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
