--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/juanfril/A-team-project#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -35,6 +36,7 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
+    "nodemailer": "^6.7.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
