--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
     "eslint-plugin-no-loops": "^0.3.0",
-    "express": "^4.17.3",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
+    "knex": "^1.0.4",
     "nodemailer": "^6.7.3",
+    "pg": "^8.7.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
