--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node .",
     "dev": "tsc -w & nodemon -q -w dist .",
     "test": "jest --verbose --coverage",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "migrate": "yarn knex migrate:latest --knexfile src/database/knexfile.js"
   },
   "repository": {
     "type": "git",
