--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "tsc -w & nodemon -q -w dist .",
     "test": "jest --verbose --coverage",
     "lint": "eslint . --ext .ts",
-    "migrate": "yarn knex migrate:latest --knexfile src/database/knexfile.js"
+    "migrate": "yarn knex migrate:latest --knexfile src/database/knexfile.js",
+    "makeSeeds" : "yarn knex seed:run --knexfile src/database/knexfile.js users-seed"
   },
   "repository": {
     "type": "git",
