--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --verbose --coverage",
     "lint": "eslint . --ext .ts",
     "migrate": "yarn knex migrate:latest --knexfile src/database/knexfile.js",
-    "makeSeeds" : "yarn knex seed:run --knexfile src/database/knexfile.js users-seed"
+    "makeSeeds": "yarn knex seed:run --knexfile src/database/knexfile.js users-seed"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/juanfril/A-team-project#readme",
   "devDependencies": {
+    "@faker-js/faker": "^6.1.1",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.4",
+    "@types/prompt-sync": "^4.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -34,13 +36,14 @@
     "tslint": "^6.1.3"
   },
   "dependencies": {
-    "express": "^4.17.3",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "joi": "^17.6.0",
     "knex": "^1.0.4",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
