--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/juanfril/A-team-project#readme",
   "devDependencies": {
     "@faker-js/faker": "^6.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.4",
     "@types/prompt-sync": "^4.1.1",
@@ -36,6 +37,7 @@
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
