--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
   api:
+    stdin_open: true
+    tty: true
     build: .
-    command: yarn migrate
     depends_on:
       - db
     ports:
@@ -11,6 +12,8 @@ services:
       DATABASE_NAME: a-team-postgres
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: 123456
+    command: yarn migrate
+    command: yarn start
   db:
     image: postgres:13.6-alpine3.15
     restart: always
