fix: docker-compose compilation

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "tsc -w & nodemon -q -w dist .",
     "test": "jest --verbose --coverage",
     "lint": "eslint . --ext .ts",
-    "migrate": "yarn knex migrate:latest",
-    "knex": "./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts"
+    "migrate": "yarn knex migrate:latest --knexfile ./src/database/knexfile.ts"
   },
   "repository": {
     "type": "git",
