--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       DATABASE_NAME: a-team-postgres
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: 123456
-    command: yarn migrate
-    command: yarn start
+    command: sh -c "yarn migrate && yarn start"
   db:
     image: postgres:13.6-alpine3.15
     restart: always
