--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,17 @@ services:
     ports:
       - '3001:3001'
     environment:
-      DATABASE_NAME: a-team-postgres
-      DATABASE_USERNAME: postgres
-      DATABASE_PASSWORD: 123456
+      DATABASE_NAME: '${DATABASE_NAME}'
+      DATABASE_USERNAME: '${DATABASE_USERNAME}'
+      DATABASE_PASSWORD: '${DATABASE_PASSWORD}'
     command: sh -c "yarn migrate && yarn start"
   db:
     image: postgres:13.6-alpine3.15
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: a-team-postgres
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: '${POSTGRES_USER}'
+      POSTGRES_DB: '${POSTGRES_DB}'
+      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
     ports:
       - '5432:5432'
     volumes:
