--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@faker-js/faker": "^6.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/nodemailer": "^6.4.4",
     "@types/prompt-sync": "^4.1.1",
     "@types/uuid": "^8.3.4",
@@ -34,6 +35,7 @@
     "eslint-plugin-no-loops": "^0.3.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.4",
     "tslint": "^6.1.3"
   },
   "dependencies": {
