--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 version: '3'
 services:
-  api:
-    stdin_open: true
-    tty: true
+  app:
     build: .
     depends_on:
-      - db
+      - postgres
     ports:
-      - '3001:3001'
+      - '8080:8080'
+    volumes:
+      - .:/app
+      - /app/node_modules
     environment:
       DATABASE_NAME: '${DATABASE_NAME}'
       DATABASE_USERNAME: '${DATABASE_USERNAME}'
       DATABASE_PASSWORD: '${DATABASE_PASSWORD}'
-    command: sh -c "yarn migrate && yarn start"
-  db:
+    command: sh -c 'yarn migrate && yarn dev'
+  postgres:
     image: postgres:13.6-alpine3.15
     restart: always
     environment:
@@ -23,7 +24,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - db:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
 volumes:
-  db:
+  postgres:
     driver: local
