--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node .",
-    "dev": "tsc -w & nodemon -q -w dist .",
+    "dev": "ts-node-dev src/index.ts",
     "makeSeeds": "yarn knex seed:run --knexfile ./src/database/knexfile.ts users-seed",
     "test": "jest --verbose --coverage",
     "lint": "eslint . --ext .ts",
@@ -34,6 +34,7 @@
     "eslint-plugin-no-loops": "^0.3.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3"
   },
   "dependencies": {
