--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "API job&talent",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node .",
-    "dev": "ts-node-dev src/index.ts",
+    "start": "NODE_ENV=producction tsc && node .",
+    "dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "makeSeeds": "yarn knex seed:run --knexfile ./src/database/knexfile.ts users-seed",
-    "test": "jest --verbose --coverage",
+    "test": "NODE_ENV=test jest --verbose --coverage",
     "lint": "eslint . --ext .ts",
     "migrate": "yarn knex migrate:latest --knexfile ./src/database/knexfile.ts"
   },
