--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": 1,
+    //"no-console": 1,
     "no-loops/no-loops": 2
   }
 }
