--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
       "@use-cases/*": ["core/application/use-cases/*"],
       "@infrastructure/*": ["infrastructure/*"],
       "@user-interface/*": ["user-interface/*"],
-      "@utis/*": ["utis/*"],
+      "@utils/*": ["utils/*"],
       "@mocks/*": ["__mocks__/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
