--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,11 @@ services:
     image: postgres:13.6-alpine3.15
     restart: always
     environment:
-      POSTGRES_USER: '${POSTGRES_USER}'
-      POSTGRES_DB: '${POSTGRES_DB}'
-      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
+      POSTGRES_USER: '${DATABASE_USERNAME}'
+      POSTGRES_DB: '${DATABASE_NAME}'
+      POSTGRES_PASSWORD: '${DATABASE_PASSWORD}'
     ports:
-      - '5430:5430'
+      - '5432:5432'
     volumes:
       - postgres:/var/lib/postgresql/data
 volumes:
