--- a/env.template
+++ b/env.template
@@ -1,6 +1,6 @@
-EMAIL_NODEMAILER = example@example.es
-EMAIL_NODEMAILER_PASSWORD = pass
+EMAIL_NODEMAILER = 
+EMAIL_NODEMAILER_PASSWORD = 
 
-DATABASE_NAME = example-postgres
-DATABASE_USERNAME = postgres
-DATABASE_PASSWORD = pass
+DATABASE_NAME = 
+DATABASE_USERNAME = 
+DATABASE_PASSWORD =
