--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
     "@types/prompt-sync": "^4.1.1",
     "@types/uuid": "^8.3.4",
@@ -45,6 +46,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.4",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
