--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,4 +17,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           instance-ids: ${{ secrets.INSTANCE_ID }}
           working-directory: /home/ec2-user/
-          command: git pull;
+          command: echo "hello";
