--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,7 @@ jobs:
         id: deploy
         run: |
           aws deploy create-deployment \
-            --application-name a-team-project \
+            --application-name a-team-project-app \
             --deployment-group-name GroupATeamProject \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
