--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,26 +22,30 @@ jobs:
           aws-region: eu-central-1
       # Step 5
       - name: Build Application and Run unit Test
-        run: docker-compose down & docker-compose up -d
-
-  continuous-deployment:
-    runs-on: ubuntu-latest
-    needs: [continuous-integration]
-    if: github.ref == 'refs/heads/main'
-    steps:
-      # Step 1
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      # Step 2
-      - name: Create CodeDeploy Deployment
-        id: deploy
         run: |
-          aws deploy create-deployment \
-            --application-name a-team-project-app \
-            --deployment-group-name GroupATeamProject \
-            --deployment-config-name CodeDeployDefault.OneAtATime \
-            --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+          docker-compose down \
+          git pull
+          yarn install \
+          docker-compose up -d
+
+  # continuous-deployment:
+  #   runs-on: ubuntu-latest
+  #   needs: [continuous-integration]
+  #   if: github.ref == 'refs/heads/main'
+  #   steps:
+  #     # Step 1
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: eu-central-1
+  #     # Step 2
+  #     - name: Create CodeDeploy Deployment
+  #       id: deploy
+  #       run: |
+  #         aws deploy create-deployment \
+  #           --application-name a-team-project-app \
+  #           --deployment-group-name GroupATeamProject \
+  #           --deployment-config-name CodeDeployDefault.OneAtATime \
+  #           --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
