--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,26 +7,19 @@ jobs:
   continuous-integration:
     runs-on: ubuntu-latest
     steps:
-      # Step 1
       - uses: actions/checkout@v2
-      # Step 2
-      # Step 3
-      - name: Install dependencies
-        run: npm install
-      # Step 4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-      # Step 5
       - name: Build Application and Run unit Test
         run: |
           docker-compose down \
           git pull
           yarn install \
-          docker-compose up -d
+          docker-compose up
 
   # continuous-deployment:
   #   runs-on: ubuntu-latest
