--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,21 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [main]
-
 jobs:
   continuous-integration:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup node-version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '17.6.0'
+      - name: Install dependencies
+        run: yarn install
+      - name: Linter status
+        run: yarn eslint
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -22,19 +31,17 @@ jobs:
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/main'
     steps:
-      # Step 1
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-      # Step 2
       - name: Create CodeDeploy Deployment
         id: deploy
         run: |
           aws deploy create-deployment \
             --application-name a-team-project-app \
             --deployment-group-name GroupATeamProject \
-            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
