--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,5 +43,5 @@ jobs:
           aws deploy create-deployment \
             --application-name a-team-project-app \
             --deployment-group-name GroupATeamProject \
-            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
