--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,8 +23,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-      - name: Build Application and Run unit Test
-        run: git pull
+      - name: update github status
+        uses: actions/update-github-status@v1
+        with:
+          context: Continuous Integration
+          description: Build
+          event: success
+          sha: ${{ github.sha }}
+          target_url: ${{ github.workflow.url }}
 
   # continuous-deployment:
   #   runs-on: ubuntu-latest
