--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,22 +26,24 @@ jobs:
       - name: Build Application and Run unit Test
         run: docker-compose down & docker-compose up -d
 
-  # continuous-deployment:
-  #   runs-on: ubuntu-latest
-  #   needs: [continuous-integration]
-  #   if: github.ref == 'refs/heads/main'
-  #   steps:
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: eu-central-1
-  #     - name: Create CodeDeploy Deployment
-  #       id: deploy
-  #       run: |
-  #         aws deploy create-deployment \
-  #           --application-name a-team-project-app \
-  #           --deployment-group-name GroupATeamProject \
-  #           --deployment-config-name CodeDeployDefault.OneAtATime \
-  #           --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+  continuous-deployment:
+    runs-on: ubuntu-latest
+    needs: [continuous-integration]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+            --application-name ${{ github.repository }} \
+            --deployment-group-name ${{ github.repository }} \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --revision-sources \
+              Type=GitHub,Location={{ github.repository }},Revision={{ github.sha }} \
+            --description "Deployed by GitHub Actions"
