Fix: Unwanted behavior on getOneUser route

--- a/env.template
+++ b/env.template
@@ -4,3 +4,6 @@ EMAIL_NODEMAILER_PASSWORD =
 DATABASE_NAME = 
 DATABASE_USERNAME = 
 DATABASE_PASSWORD =
+
+JWT_SECRET_KEY = 
+JWT_REFRESH_SECRET_KET = 
