--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,21 +24,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
 
-  continuous-deployment:
-    runs-on: ubuntu-latest
-    needs: [continuous-integration]
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      - name: Create CodeDeploy Deployment
-        id: deploy
-        run: |
-          aws deploy create-deployment \
-            --application-name a-team-project-app \
-            --deployment-group-name GroupATeamProject \
-            --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+  # continuous-deployment:
+  #   runs-on: ubuntu-latest
+  #   needs: [continuous-integration]
+  #   if: github.ref == 'refs/heads/main'
+  #   steps:
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: eu-central-1
+  #     - name: Create CodeDeploy Deployment
+  #       id: deploy
+  #       run: |
+  #         aws deploy create-deployment \
+  #           --application-name a-team-project-app \
+  #           --deployment-group-name GroupATeamProject \
+  #           --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
