--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "awilix": "^7.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
