--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,12 +29,13 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "src",
     "paths": {
-      "app/*": ["app/*"],
+      "@core/*": ["core/*"],
+      "@infrastructure/*": ["infrastructure/*"],
+      "@user-interface/*": ["user-interface/*"],
       "@domain/*": ["core/domain/*"],
+      "@application/*": ["core/application/*"],
       "@ports/*": ["core/application/ports/*"],
-      "@use-cases": ["core/application/use-cases/*"],
-      "@shared/*": ["infrastructure/shared/*"],
-      "@infrastructure/*": ["infrastructure/*"]
+      "@shared/*": ["infrastructure/shared/*"]
     },
     /* Specify a set of entries that re-map imports to additional lookup locations. */ // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
