--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.1.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/chance": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -45,6 +46,7 @@
     "awilix": "^7.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "chance": "^1.1.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
