--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "parser": "typescript"
   }
 }
