--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API job&talent",
   "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=producction tsc && node .",
-    "dev": "NODE_ENV=development ts-node-dev src/index.ts",
+    "start": "NODE_ENV=production tsc && node .",
+    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
     "makeSeeds": "yarn knex seed:run --knexfile ./src/infrastructure/shared/database/knexfile.ts users-seed",
     "test": "NODE_ENV=test jest --verbose --coverage --passWithNoTests",
     "lint": "eslint . --ext .ts",
@@ -40,9 +40,11 @@
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^4.0.0",
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "@types/node": "^17.0.32",
     "awilix": "^7.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
