add admin initial migration

--- a/env.template
+++ b/env.template
@@ -7,3 +7,8 @@ DATABASE_PASSWORD =
 
 JWT_SECRET_KEY = 
 JWT_REFRESH_SECRET_KET = 
+
+SUPER_USER_EMAIL =
+SUPER_USER_PASSWORD =
+SUPER_USER_PASSWORD_ENCRYPTED =
+
