--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "NODE_ENV=production tsc && node .",
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "dev": "NODE_ENV=development ts-node -r tsconfig-paths/register src/index.ts",
     "makeSeeds": "yarn knex seed:run --knexfile ./src/infrastructure/shared/database/knexfile.ts users-seed",
     "test": "NODE_ENV=test jest --verbose --coverage --passWithNoTests",
     "lint": "eslint . --ext .ts",
@@ -26,6 +26,7 @@
     "@faker-js/faker": "^6.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/chance": "^1.1.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -39,7 +40,6 @@
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.4",
-    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
     "tslint": "^6.1.3"
   },
@@ -49,6 +49,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "chance": "^1.1.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
@@ -57,8 +58,8 @@
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "prompt-sync": "^4.2.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2",
     "uuid": "^8.3.2"
   }
 }
